# pr-amplitudeGlue

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
data/samples/: README.md  ecommerce.json  finance.json  streaming.json
src/amplitude_glue/: __init__.py  cli.py  config.py  exporters.py  openai_client.py  schema_inference.py  warehouse_queries.py
src/amplitude_glue.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_config.py  test_schema_inference.py  test_warehouse_queries.py
